fix reset button color for dark mode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -17,6 +17,7 @@
   --ifm-color-primary-lightest: #BFC4CA;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --custom-editor-reset-color: #374BBB;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -31,6 +32,7 @@
   --ifm-color-primary-lighter: #32d0d6;
   --ifm-color-primary-lightest: #4fd5e1;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --custom-editor-reset-color: #25bac2;
 }
 
 #tryinsomthin{
